[gd_scene load_steps=2 format=3 uid="uid://cfu3l0l6haf1a"]

[ext_resource type="Script" path="res://scripts/difficulty_change_menu.gd" id="1_xt6bl"]

[node name="Difficulty change menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xt6bl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 524.0
offset_bottom = 531.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Easy" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Easy"

[node name="Normal" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Normal"

[node name="Hard" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Hard"

[node name="Insane" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Insane"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Insane" to="." method="_on_insane_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
